--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "prestart": "next build",
-    "lint": "eslint ./**/* --fix",
+    "lint":
+      "eslint . --ignore-path '.gitignore' --ignore-pattern 'jest.*' --ignore-pattern 'static/*' --fix",
     "prettier":
       "prettier --single-quote --write '{,!(.next)/**/}*.{js,json,jsx,md}' "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^2.2.2",
     "babel-plugin-styled-components": "1.5.1",
     "dotenv": "^5.0.1",
     "enzyme": "3.2.0",
     "jest": "22.0.1",
+    "knex": "^0.15.2",
     "koa": "2.5.0",
+    "koa-body": "^4.0.4",
     "koa-router": "7.4.0",
     "next": "5.0.0",
+    "pg": "^7.6.0",
     "react": "^16.4.1",
     "react-dom": "16.2.0",
     "react-google-maps": "9.4.5",
@@ -40,11 +45,7 @@
     "styled-components": "^3.3.3"
   },
   "lint-staged": {
-    "./**/*{js,jsx,json,css}": [
-      "npm run prettier",
-      "eslint ./**/* --fix",
-      "git add"
-    ]
+    "*.js": ["npm run prettier", "npm run lint --", "git add"]
   },
   "devDependencies": {
     "babel-eslint": "8.2.2",
